force-app/main/default/objects/Exchange_Rate_Of_Thai_FCY__c/Exchange_Rate_Of_Thai_FCY__c.object-meta.xml
<CustomObject>
    <description>อัตรแลกเปลี่ยนรายปีของ TMB</description>
    <label>Exchange Rate Of Thai FCY</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rate Of Thai FCYs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>