force-app/main/default/objects/Exchange_Rate_Of_Thai_FCY__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>เอาไว้ใช้  Upsert</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>