force-app/main/default/objects/Exchange_Rate_Of_Thai_FCY__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Currency Short Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>